--- a/public/css/history.css
+++ b/public/css/history.css
@@ -16,10 +16,15 @@
   }
 
   .card{
+    margin-top: 30px;
     margin: 10px;
     color:black;
     padding: 0 10px;
     font-weight: bold;
+  }
+
+  .card h1 {
+     margin-top: 20px;
   }
   
   .transfer-item {
@@ -37,9 +42,10 @@
   }
   
   
-  .transfer-date {
+  .transfer-date  {
     color: #888;
   }
+ 
   
   .transfer-info {
     color: #888;
