--- a/public/css/nominal.css
+++ b/public/css/nominal.css
@@ -21,7 +21,7 @@
 .recipient-initial {
     width: 60px;
     height: 60px;
-    background-color: var(--secondary-color);
+    background-color: grey;
     color: white;
     border-radius: 50%;
     display: flex;
