--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -167,7 +167,7 @@ h1 {
   padding-left: 40px;
   border-radius: 10px;
   margin-bottom: 40px;
-  border: 2px solid #000000;
+  
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.6);
   display: flex;
   flex-direction: column;
@@ -215,7 +215,7 @@ h1 {
 }
 
 .balance-card button {
-  background-color: #00164f;
+  background-color: #74E291;
   color: #fff;
   border: none;
   padding: 10px 15px;
@@ -229,7 +229,7 @@ h1 {
 }
 
 .transaction-history button {
-  background-color: #00164f;
+  background-color: #74E291;
   color: #fff;
   border: none;
   padding: 10px 15px;
@@ -248,7 +248,7 @@ h1 {
   max-width: 500px;
   padding: 20px;
   border-radius: 10px;
-  border: 2px solid #000000;
+  
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.6);
   height: 637px;
   display: flex;
@@ -264,7 +264,7 @@ h1 {
 }
 
 .buttons-row button {
-  background-color: #00164f;
+  background-color: #74E291;
   color: #fff;
   border: none;
   padding: 10px 15px;
@@ -310,7 +310,7 @@ button:hover {
 }
 
 .action-icon p {
-  font-size: 12px;
+  font-size: 15px;
   font-weight: bold;
   color: #000000; /* Warna teks */
   margin: 0;
@@ -345,7 +345,7 @@ button:hover {
 }
 
 .search-bar p {
-  font-size: 12px;
+  font-size: 15px;
   font-weight: bold;
   color: #000000; /* Warna teks */
   margin: 0;
