--- a/public/css/isipin.css
+++ b/public/css/isipin.css
@@ -67,7 +67,7 @@
     display: flex;
     align-items: center;
     gap: 10px;
-    background-color: #0b0c6e;
+    background-color: #59B4C3;
     padding: 30px;
     border-radius: 10px;
   }
