--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -25,7 +25,7 @@ header {
   margin-left: 20px;
 }
 
-nav {
+/* nav {
   flex: 1;
   display: flex;
   justify-content: left;
@@ -73,7 +73,7 @@ nav a:not(.active)::after {
 nav a:hover::after {
   background-color: white;
   width: 100%;
-}
+} */
 
 .header-actions {
   display: flex;
