--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -355,6 +355,20 @@ body {
     opacity: 0.8;
 }
 
+.footer a {
+    font-size: 0.9rem;
+    color: white;
+    text-decoration: none;
+    margin-bottom: 0.5rem;
+    display: block; /* Supaya tetap seperti paragraf */
+    opacity: 0.8;
+    transition: opacity 0.3s ease;
+}
+
+.footer a:hover {
+    opacity: 1; /* Efek hover untuk meningkatkan keterbacaan */
+}
+
 .social-links {
     display: flex;
     gap: 1rem;
